[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Games/Arithmetic_Game/Arithmetic_query_gen.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Elements/Screens/Main.gd" type="Script" id=2]
[ext_resource path="res://src/Games/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Elements/Custom_Elements/RockPaperScissors_QueryGen.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/poco/Poco.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/Elements/Icons/cross.svg" type="Texture" id=6]
[ext_resource path="res://src/Elements/Icons/check.svg" type="Texture" id=7]
[ext_resource path="res://src/Elements/Shaders/CRT-Screen.tres" type="Material" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
extra_spacing_top = -18
extra_spacing_bottom = 2
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=2]
script/source = "extends Label


func _physics_process(delta):
	set_text(\"Lives: %s\" % globals.lives)
"

[sub_resource type="GDScript" id=3]
script/source = "extends Label


func _physics_process(delta):
	set_text(\"Score: %s\" % globals.score)
"

[sub_resource type="GDScript" id=4]
script/source = "extends ColorRect


func _physics_process(delta):
	if(globals.get_desired_flag()):
		set_frame_color(Color(0,1,0,1))
	else:
		set_frame_color(Color(1,0,0,1))
"

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 800

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
volume_db = -21.86

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer"]
layer = 100
offset = Vector2( 0, -30 )
transform = Transform2D( 1, 0, 0, 1, 0, -30 )

[node name="LivesLabel" type="Label" parent="CanvasLayer/CanvasLayer"]
margin_top = 568.0
margin_right = 156.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "Lives: %s"
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/CanvasLayer"]
margin_left = 635.037
margin_top = 568.0
margin_right = 799.037
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "Score: %s"
script = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DesiredFlagIndicator" type="ColorRect" parent="CanvasLayer/CanvasLayer"]
visible = false
anchor_right = 0.05
anchor_bottom = 0.067
margin_left = 363.867
margin_top = 558.786
margin_right = 363.867
margin_bottom = 558.586
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Correct Icon" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 0.243137, 0.737255, 0.0431373, 1 )
position = Vector2( 400, 300 )
scale = Vector2( 1.97229, 1.97229 )
texture = ExtResource( 7 )

[node name="Wrong Icon" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 400, 300 )
scale = Vector2( 1.97229, 1.97229 )
texture = ExtResource( 6 )

[node name="Game Layer" type="CanvasLayer" parent="."]

[node name="Game" parent="Game Layer" instance=ExtResource( 3 )]

[node name="Query Generators" type="Node" parent="."]

[node name="ArithmeticQueryGen" parent="Query Generators" instance=ExtResource( 1 )]

[node name="RockPaperScissors_QueryGen" parent="Query Generators" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 400, 300 )
current = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 101

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
material = ExtResource( 8 )
margin_right = 800.0
margin_bottom = 600.0
mouse_filter = 2
texture = SubResource( 6 )
expand = true
stretch_mode = 1
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="query_request" from="." to="Query Generators/RockPaperScissors_QueryGen" method="_on_query_requested"]
[connection signal="query_request" from="." to="Query Generators/ArithmeticQueryGen" method="_on_query_requested"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="player_complete" from="Game Layer/Game" to="." method="_on_Game_player_complete"]
[connection signal="query_generated" from="Query Generators/ArithmeticQueryGen" to="." method="_on_query_generated"]
[connection signal="query_generated" from="Query Generators/RockPaperScissors_QueryGen" to="." method="_on_query_generated"]
